[package]
name = "pwg"
version = "0.1.0"
edition = "2018"
authors = ["Sander Smits <jhmsmits@gmail.com>"]
description = "A password generator for the command-line"
repository = "https://github.com/jsmits/pwg"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
passwords = "3.1.7"
structopt = "0.3.23"
